Revised all samples project.